--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build:freeboard": "ENTRY_FILE=freeboard rollup -c config/rollup.config.js ",
+    "build:tldraw": "rollup -c config/tldraw_rollup.config.js",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear"
@@ -11,13 +12,18 @@
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@tldraw/core": "*",
+    "@tldraw/tldraw": "*",
     "@tsconfig/svelte": "^1.0.0",
     "autoprefixer": "^10.1.0",
     "postcss": "^8.2.2",
     "postcss-load-config": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.44.2",
@@ -28,8 +34,11 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^5.0.2",
     "@tiptap/core": "*",
     "@tiptap/starter-kit": "*",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.3.3",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
@@ -64,6 +73,7 @@
     "svelte-split-pane": "^0.1.2",
     "svelte-tooltip": "^1.2.0",
     "temphia-frontend": "https://gitpkg.now.sh/temphia/temphia/code/frontend?dev2",
+    "typescript": "^4.6.4",
     "xterm": "^5.0.0",
     "yootils": "0.0.17"
   }
