--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@rollup/plugin-replace": "^5.0.2",
     "@tiptap/core": "*",
+    "@tiptap/extension-image": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "*",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
