--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build:freeboard": "ENTRY_FILE=freeboard rollup -c config/rollup.config.js ",
     "build:simpletasks": "ENTRY_FILE=simpletasks rollup -c config/rollup.config.js ",
-    "build:eventmap": "ENTRY_FILE=eventmap rollup -c config/rollup.config.js ",
+    "build:eventmap": "PRODUCTION=1 ENTRY_FILE=eventmap_main rollup -c config/rollup.config.js ",
+    "build:eventmap:emitter": "PRODUCTION=1 ENTRY_FILE=eventmap_emitter rollup -c config/rollup.config.js ",
     "build:tldraw": "rollup -c config/tldraw_rollup.config.js",
     "build": "rollup -c",
     "dev": "rollup -c -w",
