--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -78,9 +78,11 @@
     "svelte-simple-modal": "^0.6.1",
     "svelte-split-pane": "^0.1.2",
     "svelte-tooltip": "^1.2.0",
+    "temphia_yjs": "github:temphia/temphia_yjs",
     "temphia-frontend": "https://gitpkg.now.sh/temphia/temphia/code/frontend?dev2",
     "typescript": "^4.6.4",
     "xterm": "^5.0.0",
+    "yjs": "^13.5.52",
     "yootils": "0.0.17"
   }
 }
