add room resource

--- a/.temphia/simpledoc/bprint.yaml
+++ b/.temphia/simpledoc/bprint.yaml
@@ -7,6 +7,7 @@ env_file: .temphia/simpledoc/.env
 files:
   schema.json: .temphia/simpledoc/schema.json
   plug.schema.json: .temphia/simpledoc/plug.schema.json
+  room.schema.json: .temphia/simpledoc/room.schema.json
   server.js: source/backend/simpledoc/server.js
   client.js: source/frontend/public/build/simpledoc.js
   client.css: source/frontend/public/build/simpledoc.css
