--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -78,7 +78,7 @@
     "svelte-simple-modal": "^0.6.1",
     "svelte-split-pane": "^0.1.2",
     "svelte-tooltip": "^1.2.0",
-    "temphia-frontend": "https://gitpkg.now.sh/temphia/temphia/code/frontend?dev2",
+    "temphia-frontend": "https://gitpkg.now.sh/temphia/temphia/code/frontend?main",
     "typescript": "^4.6.4",
     "xterm": "^5.0.0",
     "y-quill": "^0.1.5",
