--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@rollup/plugin-replace": "^5.0.2",
+    "@temphia/temphia": "^1.0.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.3.3",
@@ -78,7 +79,6 @@
     "svelte-simple-modal": "^0.6.1",
     "svelte-split-pane": "^0.1.2",
     "svelte-tooltip": "^1.2.0",
-    "temphia-frontend": "https://gitpkg.now.sh/temphia/temphia/code/frontend?main",
     "typescript": "^4.6.4",
     "xterm": "^5.0.0",
     "y-quill": "^0.1.5",
