freeboard config to new pacman system

--- a/.temphia/freeboard/bprint.yaml
+++ b/.temphia/freeboard/bprint.yaml
@@ -5,9 +5,7 @@ description: Freeboard is a canvas for your ideas.
 version: current
 env_file: .temphia/freeboard/.env
 files:
-  schema.json: .temphia/freeboard/schema.json
-  plug.schema.json: .temphia/freeboard/plug.schema.json
-  room.schema.json: .temphia/freeboard/room.schema.json
+  app.json: .temphia/freeboard/app.json
   server.js: source/backend/freeboard/server.js
   client.js: source/frontend/public/build/freeboard.js
   client.css: source/frontend/public/build/freeboard.css
